--- a/index.html
+++ b/index.html
@@ -242,31 +242,31 @@
       letter-spacing: 1px;
     }
 
-    /* Botón industrial */
+    /* Botón industrial más grande */
     .button-container {
       margin-top: 25px;
       text-align: center;
     }
 
     .boton-principal {
-      width: 100px;
-      height: 100px;
+      width: 180px;
+      height: 180px;
       border-radius: 50%;
-      font-size: 1em;
+      font-size: 1.4em;
       font-weight: bold;
-      border: 3px solid #333;
+      border: 5px solid #333;
       background: linear-gradient(145deg, #ff6b35, #f7931e);
       color: white;
       cursor: pointer;
       transition: all 0.3s ease;
       box-shadow: 
-        0 6px 20px rgba(255, 107, 53, 0.4),
-        inset 0 2px 4px rgba(255, 255, 255, 0.2),
-        inset 0 -2px 4px rgba(0, 0, 0, 0.2);
+        0 10px 30px rgba(255, 107, 53, 0.4),
+        inset 0 4px 8px rgba(255, 255, 255, 0.2),
+        inset 0 -4px 8px rgba(0, 0, 0, 0.2);
       position: relative;
       overflow: hidden;
       text-transform: uppercase;
-      letter-spacing: 1px;
+      letter-spacing: 2px;
       font-family: 'Roboto Mono', monospace;
     }
 
@@ -286,9 +286,9 @@
     .boton-principal:hover {
       transform: scale(1.05);
       box-shadow: 
-        0 12px 35px rgba(255, 107, 53, 0.6),
-        inset 0 2px 4px rgba(255, 255, 255, 0.3),
-        inset 0 -2px 4px rgba(0, 0, 0, 0.2);
+        0 18px 45px rgba(255, 107, 53, 0.6),
+        inset 0 4px 8px rgba(255, 255, 255, 0.3),
+        inset 0 -4px 8px rgba(0, 0, 0, 0.2);
     }
 
     .boton-principal:hover::before {
@@ -353,9 +353,9 @@
       }
 
       .boton-principal {
-        width: 90px;
-        height: 90px;
-        font-size: 0.9em;
+        width: 150px;
+        height: 150px;
+        font-size: 1.2em;
       }
 
       .result-value {
